--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+resources
+
+
 # From: https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
