--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 resources
+log
+checkpoints
+results
 
+*.pt
 
 # From: https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
